# Scope2000

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  app_icon.rs  main.rs  system_header_shader.wgsl  theme.rs
src/app/actions/: csv_export.rs  events.rs  mod.rs  panes.rs  (+4 more)
src/console/: mod.rs  panel.rs
src/source/: mod.rs
src/ui/: abz_zeroing.rs  current_sensor_calibration.rs  menu_bar.rs  mod.rs  modals.rs  status_bar.rs  welcome.rs
src/variable/: mod.rs  panel.rs
src/wave/: csv.rs  csv_button_shader.wgsl  data.rs  dnd.rs  mod.rs  pane.rs  panel.rs  selection.rs  viewer_panel.rs
tests/vectors/: ack_block_req_unsupported.txt  ack_cal_commit.txt  ack_cal_ct_commit.txt  ack_capture_force_badparam.txt  ack_capture_force_badstate.txt  ack_capture_force_req.txt  ack_capture_replay_req.txt  ack_cmd_busy.txt  ack_daq_bind.txt  ack_daq_bind_badstate.txt  block_data_1blk.txt  block_data_capture_frozen.txt  block_data_empty.txt  block_data_mixed.txt  block_req.txt  cal_commit.txt  cal_read.txt  cal_read_resp.txt  cal_write.txt  capture_batch_push.txt  capture_batch_replay.txt  capture_force_badparam.txt  capture_force_req.txt  capture_replay_req.txt  cmd_abz_zeroing.txt  cmd_app_start.txt  cmd_cal_ct_commit.txt  cmd_cal_ct_measure.txt  cmd_srm_open_loop_abz.txt  daq_bind_2ch.txt  daq_ctrl_auto_capture.txt  daq_ctrl_capture.txt  daq_ctrl_legacy.txt  daq_ctrl_snapshot.txt  daq_ctrl_stream.txt  drain_end.txt  drain_start.txt  enum_req.txt  enum_resp_2entries.txt  enum_resp_empty.txt  (+10 more)
tools/: sync-vectors.sh
(+21 files in other folders)
