[package]
name = "scope2000"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Viewer2000 host-side scope and calibration application"
default-run = "scope2000"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1.4"
dirs = "6.0"
eframe = "0.34"
egui_extras = { version = "0.34", features = ["svg"] }
egui_plot = "0.35"
egui_tiles = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
roxmltree = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { version = "4.7", default-features = false }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
strip = true
